add issue summarizer, and fix after upgrade java to 25